--- a/README
+++ b/README
@@ -119,3 +119,9 @@ AUTHOR
     Written by Mark Stosberg <mark@summersault.com> with input from the
     CGI::Application community.
 
+COPYRIGHT and LICENSE
+    Copyright (C) 2008, Mark Stosberg. All rights reserved.
+
+    This library is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
+
